# rs-blog-x

./: .env  Cargo.toml  Dockerfile  Rocket.toml  build.sh  fly.toml  rust-toolchain  rust-toolchain.toml
src/: main.rs
src/models/: mod.rs
src/services/: mod.rs
templates/: posts.html.hbs
