[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
serde = "1.0.160"
rocket = { version = "=0.5.0-rc.3", features = ["secrets", "tls", "json"] }
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
rand = "0.8.5"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]

[dependencies.rocket_dyn_templates]
version = "=0.1.0-rc.3"
features = ["handlebars"]